[package]
authors = ["Eggy <eggy@e.email>"]
name = "bbr"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
#[[test]]
#name = "integration"
#harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2"
alloc-cortex-m = "0.4.4"
keypad2 = "0.1.1"
hd44780-driver = "0.4.0"

[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f401"]

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
#[profile.test]
#codegen-units = 1
#debug = 2
#debug-assertions = true # <-
#incremental = false
#opt-level = 3           # <-
#overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

